--- a/Spring-Framework/configuration-properties/src/main/resources/application.properties
+++ b/Spring-Framework/configuration-properties/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.application.name=configuration-properties
+remetente.nome = NoReply - DIO
+remetente.email = gabriel@dio.com
+remetente.telefone = 31985935178
