--- a/Spring-Framework/apirest-na-nuvem/build.gradle
+++ b/Spring-Framework/apirest-na-nuvem/build.gradle
@@ -28,6 +28,12 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
+tasks.jar {
+	manifest {
+		attributes["Main-Class"] = "one.digitalinnovation.apirest_na_nuvem.Application"
+	}
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
